--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.30.0",
     "beautifulsoup4>=4.13.5",
     "fastapi>=0.117.1",
     "grandalf>=0.8",
