--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "langchain-google-genai>=2.1.12",
     "langgraph>=0.6.7",
     "lxml>=6.0.2",
+    "pytest>=8.3.3",
+    "pytest-asyncio>=0.24.0",
     "pydantic[email]>=2.11.9",
     "python-dotenv>=1.1.1",
     "uvicorn[standard]>=0.37.0",
