--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,6 @@ dependencies = [
     "pydantic[email]>=2.11.9",
     "python-dotenv>=1.1.1",
     "uvicorn[standard]>=0.37.0",
+    "langgraph-checkpoint-sqlite>=2.0.11",
+    "aiosqlite>=0.21.0",
 ]
